--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -30,6 +28,26 @@
         android:layout_below="@+id/tvLat"
         android:layout_alignRight="@+id/tvLat"
         android:layout_alignEnd="@+id/tvLat" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Show Location"
+        android:id="@+id/btnShowLoc"
+        android:layout_below="@+id/tvLon"
+        android:layout_alignRight="@+id/tvLon"
+        android:layout_alignEnd="@+id/tvLon"
+        android:layout_marginTop="60dp" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start Loc Updates"
+        android:id="@+id/btnLocUpdates"
+        android:layout_below="@+id/btnShowLoc"
+        android:layout_alignLeft="@+id/btnShowLoc"
+        android:layout_alignStart="@+id/btnShowLoc" />
 
 
 </RelativeLayout>
