--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,11 @@
     android:orientation="vertical"
     style="@style/AlertDialog.AppCompat.Light">
 
+    <!-- BikeLog content will be change with fragments -->
+
     <!-- As the main content view, the view below consumes the entire
  -->
-
+<!--
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,5 +24,5 @@
         android:layout_height="wrap_content"
         android:text="SMS"
         android:id="@+id/buttonSMS"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal" /> -->
 </LinearLayout>
