--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -43,6 +43,24 @@
         android:text="@string/ss_default_message"
         android:hint="@string/ss_hint_message" />
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/txtUpdateInterval"
+        android:layout_gravity="center_horizontal"
+        android:hint="@string/ss_hint_updateInterval"
+        android:layout_margin="10dp" />
+
+    <CheckBox
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/ss_checkbox_text"
+        android:id="@+id/chkBoxAutoUpdate"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="10dp" />
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
