update sdk/ field test
Update sdk to compile with 23 / buildtoolsversion 24.0.3 ( see on sdk
manager the versions )

Started to see if all required fields are filled.

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="86dp"
         android:text="@string/ss_title"
         android:gravity="center"
         android:textColor="@android:color/black"
